# Continuity

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  agent.py  billing.py  check_genai.py  check_genai_help.py  check_genai_models.py  config.py  main.py  migrate_legacy_data.py  models.py  requirements.txt  schemas.py  server.py  setup.py  state.py  sync_agent.py  test_stitcher.py  utils.py  verify_billing_ui.py
continuity-stitch/: README.md  pyproject.toml
continuity-stitch/continuity_stitch/: core.py
continuity_agent/: agent.py
stitch_continuity_dashboard/: code.html
tests/: create_assets.py  test_api.py  test_core.py  test_hardening.py  verify_refinements.py
videostitcher/: __init__.py  exceptions.py  stitcher.py
videostitcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
