[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuity-stitch"
version = "0.1.0"
description = "Standalone video stitching utilities for Continuity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Continuity" }
]
keywords = ["ffmpeg", "video", "stitching"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://example.com/continuity-stitch"

[tool.setuptools.packages.find]
where = ["."]
include = ["continuity_stitch*"]
